# FAST-Pathology

./: ..gitignore.un~  .gitignore  .gitignore~  AppIcon.rc  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  FastPathology.cbp  LICENSE  LICENSE.md  MainWindow.cpp  MainWindow.hpp  Makefile  README.md  cmake_install.cmake  cproject.pro  fastPathology  fast_configuration_install.txt  main.cpp  qtres.qrc  qtres.rcc
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: build.yml  build_macos.yml  build_macos_arm64.yml  build_ubuntu.yml  build_windows.yaml  build_windows.yml
.github/workflows/ISSUE_TEMPLATES/: bug_report.md  feature_request.md
cmake/: Package.cmake
code-free-study/: pipelineRuntime.cpp  statistical_analysis.py
data/Icons/: fastpathology_logo_large.icns
data/Pipelines/: grade_classify_stream.fpl  nuclei_multiclass_seg_stream_wsi.fpl  nuclei_seg_stream_wsi.fpl  test.fpl  tubule_seg_stream_wsi.fpl  wsi_patch_bounding_box_detection.fpl
data/pipelines/: bach-pw-classification-mobilenetv2.fpl  breast_tumour_segmentation.fpl  colon-epithelium-segmentation.fpl  nuclei_segmentation.fpl  tissue_segmentation.fpl
fastPathology_autogen/: moc_predefs.h  mocs_compilation.cpp
fastPathology_autogen/EWIEGA46WW/: moc_MainWindow.cpp
inference_study/: CMakeLists.txt  measurePipelinePerformance.cpp  measurePipelinePerformance_old.cpp  statistical_analysis.py  test_latex_table.txt
inference_study/results/: neural-network-runtimes-case-1_batch.csv  neural-network-runtimes-case-3.csv  neural-network-runtimes-case-3a.csv  neural-network-runtimes-case-4-odac.csv
inference_study/results_windows/: neural-network-runtimes-case-1.csv  neural-network-runtimes-case-1_inceptionv3.csv
inference_study/results_windows2/: neural-network-runtimes-case-1.csv
misc/: Info.plist  Info.plist.in  fastpathology_logo_macosx.icns  qtres.cpp  qtres.qrc
misc/inference_study/: CMakeLists.txt  measurePipelinePerformance.cpp  statistical_analysis.py
misc/inference_study/results/: neural-network-runtimes-case-1.csv  neural-network-runtimes-case-1_inceptionv3.csv  neural-network-runtimes-case-2.csv  neural-network-runtimes-case-4.csv
misc/inference_study/results_windows2/: neural-network-runtimes-case-1_inceptionv3.csv
pipelines/: nuclei_seg_stream_wsi.fpl
pipelines_old/: .nuclei_seg_stream_wsi.fpl.swp  mobilenet_v2_bach_model.txt  nuclei_seg_stream_wsi.fpl
source/: MainWindow.cpp  MainWindow.hpp  main.cpp
source/gui/: MainSidePanelWidget.cpp  MainSidePanelWidget.h  MainWindow.cpp  MainWindow.hpp  SplashWidget.cpp  SplashWidget.hpp
source/gui/ExportTab/: ExportWidget.cpp  ExportWidget.h
source/gui/ProcessTab/: PipelineRunnerWidget.cpp  PipelineRunnerWidget.h  PipelineScriptEditorWidget.cpp  PipelineScriptEditorWidget.h  ProcessWidget.cpp  ProcessWidget.h
source/gui/ProjectTab/: ProjectThumbnailPushButton.cpp  ProjectThumbnailPushButton.h  ProjectWidget.cpp  ProjectWidget.h
source/gui/StatsTab/: StatsWidget.cpp  StatsWidget.h
source/gui/ViewTab/: DynamicViewTabWidget.cpp  DynamicViewTabWidget.h  ViewWidget.cpp  ViewWidget.h
source/logic/: DataManager.cpp  DataManager.h  InferenceModel.cpp  InferenceModel.h  LogicRuntimeModel.cpp  LogicRuntimeModel.h  PipelineProcess.cpp  PipelineProcess.h  ProcessManager.cpp  ProcessManager.h  Project.cpp  Project.h  SegmentationProcess.cpp  SegmentationProcess.h  WholeSlideImage.cpp  WholeSlideImage.h
source/utils/: qutilities.h  utilities.h
studies/code-free-study/: CMakeLists.txt
studies/inference-study/: CMakeLists.txt  statistical_analysis.py
studies/tumour-study/: CMakeLists.txt  measureRuntime.cpp  print_node_names.py  results-pipeline-runtime-191121.csv  results-pipeline-runtime-openvino-cpu.csv  results-pipeline-runtime.csv  statistical_analysis.py  test_read_png_result.py
test_project/: project.txt
test_project2/: project.txt
